# Nexus-Transe

./: .gitignore  .nexus_history  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  config.example.toml  config.mcp.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  uv.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  security.yml
.nexus/: session.json
config/: enterprise.example.toml
docs/: CLI.md  DISTRIBUTION.md  INSTALL.md  PRODUCTION.md  PROVIDERS.md  RELEASE.md  ROADMAP.md  ROADMAP_v2.md  api.md  architecture.md  competitive_cli_plan.md  demo-script.md  development-guide.md  directory-structure.md  known-issues.md  performance.md
docs/marketing/: PRODUCT_BRIEF.md
extensions/nexus-vscode/: extension.js  package.json
migrations/: 001_initial.sql
plugins/example-plugin/: plugin.toml
scripts/: dev.ps1  install.ps1  install.sh  nexus.cmd.template  nexus.ps1  package-release.ps1  package-release.sh  smoke.ps1  use-china-mirror.ps1
