[workspace]
resolver = "2"
members = [
    "packages/nexus-core",
    "packages/nexus-cli",
]
default-members = ["packages/nexus-cli"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["joys852"]
repository = "https://github.com/joys852/Nexus-Transe"
homepage = "https://github.com/joys852/Nexus-Transe"
description = "Nexus-Transe — Cybertron AI terminal CLI"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ignore = "0.4"
walkdir = "2"
sha2 = "0.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
colored = "2"
rustyline = { version = "14", features = ["derive"] }
toml = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
indicatif = "0.17"
ratatui = "0.28"

nexus-core = { path = "packages/nexus-core" }
